--- a/swri_prefix_tools/package.xml
+++ b/swri_prefix_tools/package.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>swri_prefix_tools</name>
   <version>3.6.0</version>
@@ -8,14 +10,13 @@
 
   </description>
   <author>Elliot Johnson</author>
-  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
+  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</exec_depend>
-  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</exec_depend>
+  <exec_depend>python3-psutil</exec_depend>
   
   <export>
     <build_type>ament_cmake</build_type>
