--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" ?>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>swri_roscpp</name>
   <version>3.6.0</version>
