--- a/swri_route_util/package.xml
+++ b/swri_route_util/package.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>swri_route_util</name>
   <version>3.6.0</version>
