--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,12 @@ jobs:
 
     strategy:
       matrix:
-        ros_distro: [melodic, noetic]
+        ros_distro: [noetic]
         ros_repo: [main, testing]
 
     steps:
       - name: Fetch repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Run industrial_ci
         uses: 'ros-industrial/industrial_ci@master'
         env:
