--- a/swri_nodelet/package.xml
+++ b/swri_nodelet/package.xml
@@ -8,7 +8,8 @@
     standalone nodes.
   </description>
 
-  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
+  <author>P. J. Reed</author>
+  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
