--- a/swri_rospy/package.xml
+++ b/swri_rospy/package.xml
@@ -6,7 +6,8 @@
   This package provides added functionality on top of rospy, including a
   single-threaded callback queue.
   </description>
-  <maintainer email="preed@swri.edu">P. J. Reed</maintainer>
+  <author>P. J. Reed</author>
+  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
