--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,12 @@ on: [push, pull_request]
 
 jobs:
   industrial_ci:
-    name: ROS CI
-    runs-on: ubuntu-latest
-
     strategy:
       matrix:
         env:
           - {ROS_DISTRO: noetic, ROS_REPO: testing}
-
+          - {ROS_DISTRO: noetic, ROS_REPO: main}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: 'ros-industrial/industrial_ci@master'
