--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -4,11 +4,10 @@
   <name>swri_roscpp</name>
   <version>3.6.1</version>
   <description>
-
-     swri_roscpp
-
+    A package that extends rclcpp with some commonly used functionality to reduce boilerplate code.
   </description>
-  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
+  <author>P. J. Reed</author>
+  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
