--- a/swri_route_util/package.xml
+++ b/swri_route_util/package.xml
@@ -9,7 +9,8 @@
     navigation messages defined in marti_nav_msgs.
   </description>
 
-  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
+  <author>P. J. Reed</author>
+  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
