--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -10,7 +10,7 @@
 
   </description>
   <author>Marc Alban</author>
-  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
+  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
 
