--- a/swri_math_util/package.xml
+++ b/swri_math_util/package.xml
@@ -4,12 +4,10 @@
   <name>swri_math_util</name>
   <version>3.6.1</version>
   <description>
-
-     swri_math_util
-
+    A package with commonly used math utility code.
   </description>
   <author>Marc Alban</author>
-  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
+  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
   
