--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -39,6 +39,7 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2_ros</depend>
   <depend>yaml-cpp</depend>
+  <test_depend>ament_cmake_gtest</test_depend>
 
   <exec_depend>python3-numpy</exec_depend>
 
