--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -47,6 +47,8 @@
   <test_depend>launch_ros</test_depend>
   <test_depend>launch_testing</test_depend>
   <test_depend>launch_testing_ament_cmake</test_depend>
+  <test_depend>tf_transformations</test_depend>
+  <test_depend>python-transforms3d-pip</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
