--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -150,32 +150,56 @@ target_include_directories(lat_lon_tf_echo
 
 target_link_libraries(lat_lon_tf_echo ${PROJECT_NAME})
 
-# TODO pjr Convert unit tests
-# if(BUILD_TESTING)
-#   find_package(ament_cmake_gtest REQUIRED)
-# 
-#  add_rostest_gtest(test_local_xy_util launch/local_xy_util.test test/test_local_xy_util.cpp)
-#  target_link_libraries(test_local_xy_util ${PROJECT_NAME})
-#
-#  add_rostest_gtest(test_utm_util launch/utm_util.test test/test_utm_util.cpp)
-#  target_link_libraries(test_utm_util ${PROJECT_NAME})
-#
-#  add_rostest_gtest(test_transform_manager launch/transform_manager.test test/test_transform_manager.cpp)
-#  target_link_libraries(test_transform_manager ${PROJECT_NAME})
-#
-#  add_rostest_gtest(test_georeference launch/georeference.test test/test_georeference.cpp)
-#  target_link_libraries(test_georeference ${PROJECT_NAME})
-#
-#  add_rostest_gtest(test_transform_util launch/transform_util.test test/test_transform_util.cpp)
-#  target_link_libraries(test_transform_util ${PROJECT_NAME})
-#
-#  add_rostest(test/initialize_invalid_gps.test)
-#  add_rostest(test/initialize_invalid_navsat.test)
-#  add_rostest(test/initialize_origin_auto_custom.test)
-#  add_rostest(test/initialize_origin_auto_gps.test)
-#  add_rostest(test/initialize_origin_auto_navsat.test)
-#  add_rostest(test/initialize_origin_manual.test)
-# endif()
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+  find_package(launch_testing_ament_cmake)
+
+  ament_add_gtest_executable(transform_manager_test test/test_transform_manager.cpp)
+  target_include_directories(transform_manager_test PRIVATE
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+  )
+  target_link_libraries(transform_manager_test ${PROJECT_NAME})
+  ament_target_dependencies(transform_manager_test rclcpp tf2 tf2_ros)
+
+  ament_add_gtest(local_xy_util_test test/test_local_xy_util.cpp)
+  target_link_libraries(local_xy_util_test ${PROJECT_NAME})
+  ament_target_dependencies(local_xy_util_test rclcpp)
+
+  ament_add_gtest(utm_util_test test/test_utm_util.cpp)
+  target_link_libraries(utm_util_test ${PROJECT_NAME})
+  ament_target_dependencies(utm_util_test rclcpp)
+
+  ament_add_gtest(georeference_test test/test_georeference.cpp)
+  target_link_libraries(georeference_test ${PROJECT_NAME})
+  ament_target_dependencies(georeference_test rclcpp tf2 ament_index_cpp)
+
+  ament_add_gtest(transform_util_test test/test_transform_util.cpp)
+  target_link_libraries(transform_util_test ${PROJECT_NAME})
+  ament_target_dependencies(transform_util_test rclcpp tf2)
+
+  add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/launch/transform_manager.test.py)
+  add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/launch/local_xy_util.test.py)
+  add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/test/initialize_invalid_gps.test.py)
+  add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/test/initialize_invalid_navsat.test.py)
+  # The "custom" functionality appears to be gone in ROS 2.
+  add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/test/initialize_origin_auto_gps.test.py)
+  add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/test/initialize_origin_auto_navsat.test.py)
+  add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/test/initialize_origin_manual.test.py)
+
+  install(TARGETS
+    transform_manager_test
+    utm_util_test
+    georeference_test
+    transform_util_test
+    local_xy_util_test
+    DESTINATION lib/${PROJECT_NAME}
+  )
+
+  install(DIRECTORY test
+    DESTINATION share/${PROJECT_NAME}
+  )
+
+endif()
 
 install(DIRECTORY include/
   DESTINATION include
