--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -42,6 +42,14 @@
 
   <exec_depend>python3-numpy</exec_depend>
 
+  <test_depend>ament_cmake_gtest</test_depend>
+  <test_depend>ament_index_cpp</test_depend>
+  <test_depend>launch_ros</test_depend>
+  <test_depend>launch_testing</test_depend>
+  <test_depend>launch_testing_ament_cmake</test_depend>
+  <test_depend>tf_transformations</test_depend>
+  <test_depend>python-transforms3d-pip</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
     <rosdoc config="rosdoc.yaml" />
