--- a/swri_cli_tools/package.xml
+++ b/swri_cli_tools/package.xml
@@ -15,6 +15,7 @@
   <depend>rcl_interfaces</depend>
   <depend>rclpy</depend>
   <depend>ros2cli</depend>
+  <depend>ros2node</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
