--- a/swri_cli_tools/package.xml
+++ b/swri_cli_tools/package.xml
@@ -16,6 +16,7 @@
   <depend>rclpy</depend>
   <depend>ros2cli</depend>
   <depend>ros2node</depend>
+  <depend>ros2param</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
