--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -43,6 +43,9 @@ if(NOT "${PROJ_FOUND}")
   )
 endif()
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "/usr/share/cmake/geographiclib/")
+find_package(GeographicLib REQUIRED)
+
 add_library(${PROJECT_NAME} SHARED
   src/georeference.cpp
   src/local_xy_util.cpp
@@ -82,6 +85,7 @@ target_link_libraries(${PROJECT_NAME}
   opencv_imgproc
   opencv_video
   ${PROJ_LIBRARIES}
+  ${GeographicLib_LIBRARIES}
   yaml-cpp
 )
 ament_target_dependencies(${PROJECT_NAME}
