Adding missing dependency

--- a/swri_cli_tools/package.xml
+++ b/swri_cli_tools/package.xml
@@ -17,6 +17,7 @@
   <depend>ros2cli</depend>
   <depend>ros2node</depend>
   <depend>ros2param</depend>
+  <depend>ros2topic</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
