--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,8 @@ jobs:
           - {ROS_DISTRO: rolling, ROS_REPO: testing}
           - {ROS_DISTRO: rolling, ROS_REPO: main}
     runs-on: ubuntu-latest
-    env:
-      PIP_BREAK_SYSTEM_PACKAGES: 1
     steps:
+      - run: printf "[install]\nbreak-system-packages = true\n" | sudo tee -a /etc/pip.conf
       - uses: actions/checkout@v4
       - uses: 'ros-industrial/industrial_ci@master'
         env: ${{matrix.env}}
