--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: 'ros-industrial/industrial_ci@master'
+      - name: Configuring pip
         run: printf "[install]\nbreak-system-packages = true\n" | sudo tee -a /etc/pip.conf
+      - uses: 'ros-industrial/industrial_ci@master'
         env: ${{matrix.env}}
