Update origin publisher params

--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -42,6 +42,7 @@
   <depend>yaml-cpp</depend>
 
   <exec_depend>python3-numpy</exec_depend>
+  <exec_depend>python3-yaml</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_index_cpp</test_depend>
