--- a/swri_opencv_util/CMakeLists.txt
+++ b/swri_opencv_util/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(swri_math_util REQUIRED)
 
 find_package(OpenCV REQUIRED core imgproc highgui)
 
-find_package(Boost REQUIRED COMPONENTS serialization thread) 
+find_package(Boost REQUIRED COMPONENTS serialization thread random)
   
 add_library(${PROJECT_NAME} SHARED
   src/blend.cpp
@@ -23,32 +23,32 @@ target_include_directories(${PROJECT_NAME}
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
 )
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(${PROJECT_NAME} PUBLIC
   Boost::boost
   Boost::serialization
   Boost::thread
   opencv_core
   opencv_imgproc
   opencv_highgui
+  cv_bridge::cv_bridge
+  swri_math_util::swri_math_util
 )
 
 set_property(TARGET ${PROJECT_NAME}
   PROPERTY POSITION_INDEPENDENT_CODE ON)
-ament_target_dependencies(${PROJECT_NAME}
-  cv_bridge
-  swri_math_util
-)
 
 install(DIRECTORY include/
   DESTINATION include
 )
 
 install(TARGETS ${PROJECT_NAME}
+  EXPORT export_${PROJECT_NAME}
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
 )
 
+ament_export_targets(export_${PROJECT_NAME})
 ament_export_dependencies(ament_cmake)
 ament_export_dependencies(cv_bridge)
 ament_export_dependencies(swri_math_util)
