--- a/swri_image_util/CMakeLists.txt
+++ b/swri_image_util/CMakeLists.txt
@@ -40,6 +40,7 @@ target_include_directories(${PROJECT_NAME}
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
+    ${message_filters_INCLUDE_DIRS}
     ${swri_geometry_util_INCLUDE_DIRS}
     ${swri_opencv_util_INCLUDE_DIRS})
 
