Fixing linking errors

--- a/swri_image_util/CMakeLists.txt
+++ b/swri_image_util/CMakeLists.txt
@@ -48,15 +48,13 @@ target_include_directories(${PROJECT_NAME}
     ${swri_geometry_util_INCLUDE_DIRS}
     ${swri_opencv_util_INCLUDE_DIRS})
 
-set_property(TARGET ${PROJECT_NAME}
-  PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(${PROJECT_NAME} PUBLIC
   ${geometry_msgs_TARGETS}
   ${nav_msgs_TARGETS}
   ${std_msgs_TARGETS}
-  ${swri_geometry_util_TARGETS}
-  ${swri_opencv_util_TARGETS}
-  ${swri_roscpp_TARGETS}
+  ${swri_geometry_util_LIBRARIES}
+  ${swri_opencv_util_LIBRARIES}
+  ${swri_roscpp_LIBRARIES}
   Boost::boost
   Boost::filesystem
   Boost::random
