--- a/swri_image_util/CMakeLists.txt
+++ b/swri_image_util/CMakeLists.txt
@@ -25,6 +25,11 @@ find_package(swri_opencv_util REQUIRED)
 find_package(swri_roscpp REQUIRED)
 find_package(tf2 REQUIRED)
 
+find_package(OpenCV REQUIRED COMPONENTS core stitching)
+
+find_package(Boost REQUIRED COMPONENTS filesystem system random serialization thread)
+
+find_package(Eigen3 REQUIRED)
 add_definitions(${EIGEN3_DEFINITIONS})
 
 add_library(${PROJECT_NAME} SHARED
@@ -38,19 +43,12 @@ add_library(${PROJECT_NAME} SHARED
 )
 target_include_directories(${PROJECT_NAME}
   PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-    ${message_filters_INCLUDE_DIRS}
-    ${swri_geometry_util_INCLUDE_DIRS}
-    ${swri_opencv_util_INCLUDE_DIRS})
-
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+)
+set_property(TARGET ${PROJECT_NAME}
+  PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(${PROJECT_NAME} PUBLIC
-  ${geometry_msgs_TARGETS}
-  ${nav_msgs_TARGETS}
-  ${std_msgs_TARGETS}
-  ${swri_geometry_util_LIBRARIES}
-  ${swri_opencv_util_LIBRARIES}
-  ${swri_roscpp_LIBRARIES}
   Boost::boost
   Boost::filesystem
   Boost::random
@@ -63,11 +61,23 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
   message_filters::message_filters
   opencv_core
   opencv_stitching
+  ${geometry_msgs_TARGETS}
+  ${nav_msgs_TARGETS}
+  ${std_msgs_TARGETS}
+  camera_calibration_parsers::camera_calibration_parsers
+  cv_bridge::cv_bridge
+  image_geometry::image_geometry
+  image_transport::image_transport
+  message_filters::message_filters
   rclcpp::rclcpp
   rclcpp_components::component
   rclcpp_components::component_manager
   swri_roscpp::swri_roscpp_library
-  tf2::tf2)
+  swri_geometry_util::swri_geometry_util
+  swri_opencv_util::swri_opencv_util
+  tf2::tf2
+)
+
 
 add_library(${PROJECT_NAME}_nodes SHARED
   src/nodes/blend_images_node.cpp
@@ -99,7 +109,7 @@ rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_image_util::Normali
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_image_util::RotateImageNode")
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_image_util::ScaleImageNode")
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_image_util::WarpImageNode")
-target_link_libraries(${PROJECT_NAME}_nodes
+target_link_libraries(${PROJECT_NAME}_nodes PUBLIC
   ${PROJECT_NAME}
   ament_index_cpp::ament_index_cpp
 )
@@ -121,11 +131,13 @@ install(DIRECTORY include/
 
 install(TARGETS ${PROJECT_NAME}
     ${PROJECT_NAME}_nodes
+  EXPORT export_${PROJECT_NAME}
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
 )
 
+ament_export_targets(export_${PROJECT_NAME} export_${PROJECT_NAME})
 ament_export_dependencies(ament_cmake)
 ament_export_include_directories(include)
 ament_export_libraries(${PROJECT_NAME}
