--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -31,7 +31,7 @@ endif()
 
 find_package(yaml-cpp REQUIRED)
 find_package(OpenCV REQUIRED calib3d core highgui imgproc video)
-find_package(Boost REQUIRED filesystem thread)
+find_package(Boost REQUIRED filesystem thread random)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(PROJ proj)
@@ -76,29 +76,31 @@ target_compile_definitions(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME}
   PUBLIC
-    Boost::boost
-    Boost::filesystem
-    Boost::thread
-    ${diagnostic_msgs_LIBRARIES}
-    ${diagnostic_updater_LIBRARIES}
-    ${GeographicLib_LIBRARIES}
-    ${geographic_msgs_LIBRARIES}
-    ${geometry_msgs_LIBRARIES}
-    ${gps_msgs_LIBRARIES}
-    opencv_calib3d
-    opencv_core
-    opencv_highgui
-    opencv_imgproc
-    opencv_video
-    ${PROJ_LIBRARIES}
-    rclcpp::rclcpp
-    ${sensor_msgs_LIBRARIES}
-    ${swri_math_util_LIBRARIES}
-    ${swri_roscpp_LIBRARIES}
-    tf2::tf2
-    ${tf2_geometry_msgs_LIBRARIES}
-    tf2_ros::tf2_ros
-    yaml-cpp
+  Boost::boost
+  Boost::filesystem
+  Boost::thread
+  ${GeographicLib_LIBRARIES}
+  opencv_calib3d
+  opencv_core
+  opencv_highgui
+  opencv_imgproc
+  opencv_video
+  ${PROJ_LIBRARIES}
+  yaml-cpp
+  ${diagnostic_msgs_TARGETS}
+  ${geographic_msgs_TARGETS}
+  ${geometry_msgs_TARGETS}
+  ${gps_msgs_TARGETS}
+  ${sensor_msgs_TARGETS}
+  diagnostic_updater::diagnostic_updater
+  geographic_msgs::validation
+  rclcpp::rclcpp
+  sensor_msgs::sensor_msgs_library
+  swri_math_util::swri_math_util
+  swri_roscpp::swri_roscpp_library
+  tf2::tf2
+  tf2_geometry_msgs::tf2_geometry_msgs
+  tf2_ros::tf2_ros
 )
 
 add_library(${PROJECT_NAME}_nodes SHARED
@@ -131,10 +133,12 @@ rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_transform_util::Gps
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_transform_util::ObstacleTransformer")
 target_link_libraries(${PROJECT_NAME}_nodes PUBLIC
   ${PROJECT_NAME}
-  ${marti_nav_msgs_LIBRARIES}
-  rcl_interfaces
-  ${swri_roscpp_LIBRARIES}
-  rclcpp_components)
+  ${marti_nav_msgs_TARGETS}
+  ${rcl_interfaces_TARGETS}
+  rclcpp_components::component
+  rclcpp_components::component_manager
+  swri_roscpp::swri_roscpp_library
+)
 
 add_executable(lat_lon_tf_echo src/nodes/lat_lon_tf_echo.cpp)
 target_include_directories(lat_lon_tf_echo
@@ -153,36 +157,21 @@ if(BUILD_TESTING)
 
   ament_add_gtest_executable(transform_manager_test test/test_transform_manager.cpp)
   target_include_directories(transform_manager_test PRIVATE
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
-
-#  target_link_libraries(transform_manager_test PUBLIC
-#    ${PROJECT_NAME}
-#    rclcpp::rclcpp
-#    tf2::tf2
-#    tf2_ros::tf2_ros)
+    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+  )
+  target_link_libraries(transform_manager_test ${PROJECT_NAME} rclcpp::rclcpp tf2::tf2 tf2_ros::tf2_ros)
 
   ament_add_gtest(local_xy_util_test test/test_local_xy_util.cpp)
-#  target_link_libraries(local_xy_util_test PUBLIC
-#    ${PROJECT_NAME}
-#    rclcpp::rclcpp)
+  target_link_libraries(local_xy_util_test ${PROJECT_NAME} rclcpp::rclcpp)
 
   ament_add_gtest(utm_util_test test/test_utm_util.cpp)
-#  target_link_libraries(utm_util_test PUBLIC
-#    ${PROJECT_NAME}
-#    rclcpp::rclcpp)
-#
+  target_link_libraries(utm_util_test ${PROJECT_NAME} rclcpp::rclcpp)
+
   ament_add_gtest(georeference_test test/test_georeference.cpp)
-#  target_link_libraries(georeference_test PUBLIC
-#    ${PROJECT_NAME}
-#    rclcpp::rclcpp
-#    tf2::tf2
-#    ament_idnex_cpp::ament_index_cpp)
+  target_link_libraries(georeference_test ${PROJECT_NAME} ament_index_cpp::ament_index_cpp rclcpp::rclcpp tf2::tf2)
 
   ament_add_gtest(transform_util_test test/test_transform_util.cpp)
-#  target_link_libraries(transform_util_test PUBLIC
-#    ${PROJECT_NAME}
-#    rclcpp::rclcpp
-#    tf2::tf2)
+  target_link_libraries(transform_util_test ${PROJECT_NAME} rclcpp::rclcpp tf2::tf2)
 
   add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/launch/transform_manager.test.py)
   add_launch_test(${CMAKE_CURRENT_SOURCE_DIR}/launch/local_xy_util.test.py)
@@ -220,6 +209,7 @@ install(TARGETS
   ${PROJECT_NAME}
   ${PROJECT_NAME}_nodes
   lat_lon_tf_echo
+  EXPORT export_${PROJECT_NAME}
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
@@ -230,6 +220,7 @@ install(PROGRAMS nodes/initialize_origin.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
+ament_export_targets(export_${PROJECT_NAME} export_${PROJECT_NAME})
 ament_python_install_package(${PROJECT_NAME})
 ament_export_definitions("${TF_UTIL_DEFINITIONS}")
 ament_export_dependencies(
