--- a/swri_opencv_util/CMakeLists.txt
+++ b/swri_opencv_util/CMakeLists.txt
@@ -4,13 +4,10 @@ project(swri_opencv_util)
 set(CMAKE_CXX_STANDARD 14)
 
 find_package(ament_cmake REQUIRED)
-
-find_package(cv_bridge REQUIRED)
-find_package(swri_math_util REQUIRED)
-
-find_package(OpenCV REQUIRED core imgproc highgui)
-
 find_package(Boost REQUIRED COMPONENTS serialization thread random)
+find_package(cv_bridge REQUIRED)
+find_package(OpenCV REQUIRED core imgproc highgui)
+find_package(swri_math_util)
   
 add_library(${PROJECT_NAME} SHARED
   src/blend.cpp
@@ -22,31 +19,26 @@ target_include_directories(${PROJECT_NAME}
   PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
-)
+  ${swri_math_util_INCLUDE_DIRS})
+
 target_link_libraries(${PROJECT_NAME} PUBLIC
   Boost::boost
   Boost::serialization
   Boost::thread
+  cv_bridge::cv_bridge
   opencv_core
   opencv_imgproc
   opencv_highgui
-  cv_bridge::cv_bridge
-  swri_math_util::swri_math_util
-)
-
-set_property(TARGET ${PROJECT_NAME}
-  PROPERTY POSITION_INDEPENDENT_CODE ON)
+  ${swri_math_util_LIBRARIES})
 
 install(DIRECTORY include/
-  DESTINATION include
-)
+  DESTINATION include)
 
 install(TARGETS ${PROJECT_NAME}
   EXPORT export_${PROJECT_NAME}
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib
-)
+  ARCHIVE DESTINATION lib)
 
 ament_export_targets(export_${PROJECT_NAME})
 ament_export_dependencies(ament_cmake)
