--- a/swri_opencv_util/CMakeLists.txt
+++ b/swri_opencv_util/CMakeLists.txt
@@ -30,14 +30,7 @@ target_link_libraries(${PROJECT_NAME}
   opencv_core
   opencv_imgproc
   opencv_highgui
-)
-
-set_property(TARGET ${PROJECT_NAME}
-  PROPERTY POSITION_INDEPENDENT_CODE ON)
-ament_target_dependencies(${PROJECT_NAME}
-  cv_bridge
-  swri_math_util
-)
+  ${swri_math_util_TARGETS})
 
 install(DIRECTORY include/
   DESTINATION include
@@ -51,6 +44,7 @@ install(TARGETS ${PROJECT_NAME}
 
 ament_export_dependencies(ament_cmake)
 ament_export_dependencies(cv_bridge)
+ament_export_dependencies(OpenCV)
 ament_export_dependencies(swri_math_util)
 ament_export_include_directories(include)
 ament_export_libraries(${PROJECT_NAME})
