--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -18,10 +18,7 @@
 
   <depend>boost</depend>
   <depend>diagnostic_updater</depend>
-  <!--
-  TODO pjr Is rcl_interfaces the replacement for dynamic reconfig now?
-  <depend>dynamic_reconfigure</depend>
-  -->
+  <depend>diagnostic_msgs</depend>
   <depend>marti_common_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>rclcpp</depend>
