Starting to remove boost

--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(swri_transform_util)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(ament_cmake REQUIRED)
 find_package(ament_cmake_python REQUIRED)
-find_package(Boost REQUIRED filesystem thread random)
 find_package(diagnostic_msgs REQUIRED)
 find_package(diagnostic_updater REQUIRED)
 find_package(geographic_msgs REQUIRED)
@@ -70,9 +69,6 @@ target_compile_definitions(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME}
   PUBLIC
-  Boost::boost
-  Boost::filesystem
-  Boost::thread
   ${GeographicLib_LIBRARIES}
   opencv_calib3d
   opencv_core
@@ -81,21 +77,18 @@ target_link_libraries(${PROJECT_NAME}
   opencv_video
   ${PROJ_LIBRARIES}
   yaml-cpp
-)
-ament_target_dependencies(${PROJECT_NAME}
-  PUBLIC
-  diagnostic_msgs
-  diagnostic_updater
-  geographic_msgs
-  geometry_msgs
-  gps_msgs
-  rclcpp
-  sensor_msgs
-  swri_math_util
-  swri_roscpp
-  tf2
-  tf2_geometry_msgs
-  tf2_ros
+  ${geographic_msgs_TARGETS}
+  ${geometry_msgs_TARGETS}
+  ${gps_msgs_TARGETS}
+  ${sensor_msgs_TARGETS}
+  geographic_msgs::validation
+  rclcpp::rclcpp
+  sensor_msgs::sensor_msgs_library
+  swri_math_util::swri_math_util
+  swri_roscpp::swri_roscpp_library
+  tf2::tf2
+  tf2_geometry_msgs::tf2_geometry_msgs
+  tf2_ros::tf2_ros
 )
 
 add_library(${PROJECT_NAME}_nodes SHARED
@@ -232,7 +225,6 @@ ament_python_install_package(${PROJECT_NAME})
 ament_export_definitions("${TF_UTIL_DEFINITIONS}")
 ament_export_dependencies(
   ament_cmake
-  Boost
   geographic_msgs
   geometry_msgs
   gps_msgs
